feat(api, web): replace Supabase with custom admin backend
- Remove Supabase client and server implementation from `web/lib/supabase/`.
- Add `.env.local` configuration for API proxying in the frontend.
- Introduce FastAPI `admin` module for backend management:
  - Add admin tables, seed data via Alembic migration.
  - Implement admin API routes, schemas, models, and services.
- Create `AdminApiClient` for frontend communication with backend.
- Integrate environment-based API configurations for scalability.

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "python-slugify>=8.0.0",
     "python-multipart>=0.0.12",
     "twilio>=9.0.0",
+    "PyJWT>=2.8.0",
+    "greenlet>=3.3.0",
 ]
 
 [project.optional-dependencies]
@@ -117,6 +119,8 @@ module = [
     "openpyxl.*",
     "slugify.*",
     "twilio.*",
+    "passlib.*",
+    "jwt.*",
 ]
 ignore_missing_imports = true
 
