--- a/api/.env.example
+++ b/api/.env.example
@@ -8,7 +8,7 @@ ENVIRONMENT=development
 HOST=0.0.0.0
 PORT=8000
 
-# Database (Supabase Postgres)
+# Supabase Postgres
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/fieldops
 
 # Security
@@ -40,6 +40,12 @@ QDRANT_API_KEY=your-qdrant-api-key
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 
-# Supabase Storage
+# Supabase
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=your-supabase-service-role-key
+SUPABASE_JWT_SECRET=your-jwt-secret-from-supabase-dashboard
+
+# Admin Panel
+# These are used to create the initial admin user during database migration
+ADMIN_EMAIL=admin@fieldops.ai
+ADMIN_PASSWORD=change-me-in-production
